<resources>
    <string name="app_name">MvvmSampleApp</string>
    <string name="hint_enter_username">"Enter user name "</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="app_title">MVVM Sample App</string>
    <string name="imgLogoDescription">Android logo</string>
    <string name="imgBackgroundDescription">"A computer background "</string>
    <string name="submitDescription">Submit</string>
    <string name="flat_list_description">Flat list will come here</string>
    <string name="please_wait_description">Please wait ...</string>
    <string name="app_name_description">FLAT MATES</string>
    <string name="app_title_description">Use FLAT MATES to book flats for you and your friends</string>
    <string name="login_description">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
